--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <link rel="stylesheet" type="text/css" href="proyecto.css">
+        <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+        <script type="text/javascript" src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <title>Ventana de Acceso al Sistema</title>
+
+    </head>
+
 <?php
 include_once "encabezado.php";
 include_once "navbar.php";
@@ -122,3 +135,9 @@ $productosMasVendidos = obtenerProductosMasVendidos();
 	 	</tbody>
 	 </table>
 </div>	
+
+
+
+
+</body>
+</html>
