--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 
 <?php
-include_once "encabezado.php";
+include_once "encabezado.html";
 include_once "navbar.php";
 include_once "funciones.php";
 session_start();
